--- a/app/deploy/css/changstarr.css
+++ b/app/deploy/css/changstarr.css
@@ -16,4 +16,137 @@
     Media Query
 */@media screen and (max-width: 1100px){.header .track{font-size:13px;height:490px}.header .track .track_list{height:270px}.header .track .track_list .track_item{font-size:14px;margin:0 2em 0.8em 2em}.header .track .track_list .track_item:hover>.track_link{background-color:transparent}}@media screen and (max-width: 767px){.header .track{font-size:12px;height:100%}.header .track .track_list{display:block;padding:0px;height:100%}.header .track .track_list .track_item{font-size:15px;margin:0 0em 0.6em 0em;line-height:1.6}.header .track .track_list .track_item:hover>.track_link{background-color:transparent}.contents .contents_top{padding:6em 25px 0}.contents .contents_top .song_title{display:block;font-size:24px;margin-bottom:30px}.contents .contents_top .song_info{float:none;clear:both;margin:4em 0 30px 0;font-size:14px;line-height:1.8}.contents .contents_top .song_info .song_author{font-size:17px}.contents .contents_btm .song_video{right:0;position:relative;margin-top:0;width:100%;height:240px}.contents .contents_btm .lyrics{font-size:15px;line-height:2.15}.contents .contents_btm .lyrics .lyrics_link{padding:4px 0px}html.mobile .contents .contents_popup{z-index:10;-webkit-backface-visibility:hidden;-webkit-overflow-scrolling:touch;position:fixed;top:0;bottom:0;right:0;height:100%;padding-left:0;background-color:#1b1b1b;transition:opacity .6s}html.mobile .contents .contents_popup .popup_line{position:fixed;left:initial;right:420px}html.mobile .contents .contents_popup .popup_info{overflow-y:scroll}html.mobile .contents .contents_popup .popup_info .popup_lyrics{display:block;padding:22px 20px 17px 20px}html.mobile .contents .contents_popup .popup_info .popup_desc{padding:24px 20px 24px 20px}html.mobile .contents .contents_popup .popup_info .popup_desc p{font-size:14px;line-height:2.2;margin-bottom:1em}html.mobile .contents .contents_popup.on{visibility:visible}html.mobile .contents .contents_popup.on+.popup_arrow{opacity:0}html.mobile .contents .contents_popup.on+.popup_arrow+.popup_layer{opacity:1;display:block;transition:opacity .6s}html.mobile .contents .popup_arrow{display:none}html.mobile .contents .popup_close{display:block;right:420px;opacity:0}html.mobile .contents .popup_close.on{opacity:1;transition:opacity .5s}html.mobile .contents #disqus_thread{padding:24px 20px 24px 20px}}@media screen and (max-width: 640px){.header{padding-top:20px}.header .visual{height:100%;padding:2em 0 0;margin:0 auto 1.8em}.header .visual .title{font-size:26px}.header .visual .sns{right:15px}.header .visual .sns li{width:16px;height:16px}.header .track{font-size:12px;height:100%}.header .track .player{width:320px}.header .track .track_list{padding:0 15px}.header .track .track_list .track_item{font-size:14px;line-height:1.5}.contents .contents_top{padding:5em 25px 0}.contents .contents_top .song_title{display:block;font-size:25px}.contents .contents_top .song_info{margin:3em 0 30px 0;font-size:14px;line-height:1.6}.contents .contents_top .song_info .song_author{font-size:18px}.contents .contents_btm{padding:0 20px 8em}.contents .contents_btm .lyrics{font-size:14px;line-height:2.15}.contents .contents_btm .lyrics .lyrics_link{padding:4px 0px}html.mobile .contents .contents_popup{width:85vw}html.mobile .contents .contents_popup .popup_line{position:fixed;left:initial;right:85vw}html.mobile .contents .contents_popup .popup_info .popup_desc p{font-size:13px}html.mobile .contents .popup_close{right:85vw}}
 
+
+
+/* 180515 추가 */
+
+.hamburger {
+    z-index: 10;
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    width: 30px;
+    height: 30px;
+    background: none;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+  }
+  .hamburger > .hamburger_icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .hamburger > .hamburger_icon span {
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 2px;
+    transition: transform .2s;
+    background-color: #fff;
+    transition: background-color .3s, transform .3s;
+  }
+  .hamburger > .hamburger_icon span:first-child {
+    top: -5px;
+  }
+  .hamburger > .hamburger_icon span:nth-child(3) {
+    opacity: 1;
+    top: 5px;
+  }
+  
+  header.opened .hamburger_icon span {
+    transition: transform .3s;
+  }
+  header.opened .hamburger_icon span:first-child {
+    transform: rotate(-45deg);
+    top: 2px;
+  }
+  header.opened .hamburger_icon span:nth-child(2) {
+    transform: rotate(45deg);
+    top: 0;
+  }
+  header.opened .hamburger_icon span:nth-child(3) {
+    transform: translate(-12px);
+    opacity: 0;
+  }
+  
 /*# sourceMappingURL=changstarr.css.map */
+
+
+
+
+.nav-container {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    display: none;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content:center;
+    -moz-justify-content:center;
+    -ms-justify-content:center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(../images/navi_bg.png);
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+  
+
+  .nav-container .nav .nav_item {
+    height: 35px;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    text-indent: -999px;
+    overflow: hidden;
+    cursor: pointer;
+    background-position: 0 0, -300px -300px;
+    background-repeat: no-repeat;
+  }
+
+  .nav-container .nav .nav_item:first-child {
+      margin-top: 0;
+  }
+
+  .nav-container .nav .nav_item:hover {
+    background-position: -300px -300px, 0 0;
+  }
+
+  .nav-container .nav .nav_item.mv {
+      width: 267px;
+      background-image: url(../images/navi_item_musicvideo.png), url(../images/navi_item_hover_musicvideo.png);
+  }
+
+  .nav-container .nav .nav_item.goods {
+      width: 133px;
+      background-image: url(../images/navi_item_goods.png), url(../images/navi_item_hover_goods.png);
+  }
+
+  .nav-container .nav .nav_item.schedule {
+      width: 188px;
+      background-image: url(../images/navi_item_schedule.png), url(../images/navi_item_hover_schedule.png);
+  }
+
+  .nav-container .nav .nav_item.album {
+      width: 145px;
+      background-image: url(../images/navi_item_album.png), url(../images/navi_item_hover_album.png);
+  }
+
+
+  @media screen and (max-width: 640px){
+
+    .nav-container .nav .nav_item {
+        transform: scale(0.7);
+        margin-top: 30px;
+    }
+  }
