--- a/app/deploy/css/changstarr.css
+++ b/app/deploy/css/changstarr.css
@@ -19,184 +19,8 @@
 
 
 /* 180515 추가 */
-
-.hamburger {
-    z-index: 100;
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    width: 30px;
-    height: 30px;
-    background: none;
-    border: none;
-    outline: 0;
-    cursor: pointer;
-  }
-  .hamburger > .hamburger_icon {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .hamburger > .hamburger_icon span {
-    position: relative;
-    display: block;
-    width: 24px;
-    height: 2px;
-    transition: transform .2s;
-    background-color: #fff;
-    transition: background-color .3s, transform .3s;
-  }
-  .hamburger > .hamburger_icon span:first-child {
-    top: -5px;
-  }
-  .hamburger > .hamburger_icon span:nth-child(3) {
-    opacity: 1;
-    top: 5px;
-  }
-  
-  header.opened .hamburger_icon span {
-    transition: transform .3s;
-  }
-  header.opened .hamburger_icon span:first-child {
-    transform: rotate(-45deg);
-    top: 2px;
-  }
-  header.opened .hamburger_icon span:nth-child(2) {
-    transform: rotate(45deg);
-    top: 0;
-  }
-  header.opened .hamburger_icon span:nth-child(3) {
-    transform: translate(-12px);
-    opacity: 0;
-  }
+.hamburger{z-index:100;position:absolute;top:40px;left:40px;width:30px;height:30px;background:0 0;border:none;outline:0;cursor:pointer}.hamburger>.hamburger_icon{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%)}.hamburger>.hamburger_icon span{position:relative;display:block;width:24px;height:2px;background-color:#fff;transition:background-color .3s,transform .3s}.hamburger>.hamburger_icon span:first-child{top:-5px}.hamburger>.hamburger_icon span:nth-child(3){opacity:1;top:5px}header.opened .hamburger_icon span{transition:transform .3s}header.opened .hamburger_icon span:first-child{transform:rotate(-45deg);top:2px}header.opened .hamburger_icon span:nth-child(2){transform:rotate(45deg);top:0}header.opened .hamburger_icon span:nth-child(3){transform:translate(-12px);opacity:0}.nav-container{opacity:0;pointer-events:none;touch-action:none;user-select:none;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-webkit-align-items:center;-moz-align-items:center;-ms-align-items:center;align-items:center;-webkit-justify-content:center;-moz-justify-content:center;-ms-justify-content:center;justify-content:center;position:absolute;top:0;left:0;width:100vw;height:100vh;background-image:url(../images/navi_bg.png);background-size:cover;background-position:50% 50%;transition:opacity .3s,transform .3s}.header.opened .nav-container{opacity:1;pointer-events:initial!important;touch-action:initial!important;user-select:initial!important;transition:opacity .8s}.header.opened .nav-container .nav{display:block}.nav-container .nav.show .nav_item{opacity:1;transform:translateY(0) scale(1);transition:opacity .8s,transform .8s;transition-timing-function:cubic-bezier(.77,0,.175,1)}.nav-container .nav.show .nav_item:nth-child(1){transition-delay:0s}.nav-container .nav.show .nav_item:nth-child(2){transition-delay:.15s}.nav-container .nav.show .nav_item:nth-child(3){transition-delay:.3s}.nav-container .nav.show .nav_item:nth-child(4){transition-delay:.45s}.nav-container .nav{display:none}.nav-container .nav .nav_item{opacity:0;transform:translateY(30px) scale(0);height:35px;margin-top:60px;margin-left:auto;margin-right:auto;text-indent:-999px;overflow:hidden;cursor:pointer;background-position:0 0,-300px -300px;background-repeat:no-repeat;transition:opacity .8s,transform .8s;transition-timing-function:cubic-bezier(.77,0,.175,1)}.nav-container .nav .nav_item:first-child{margin-top:0}.nav-container .nav .nav_item:hover{background-position:-300px -300px,0 0}.nav-container .nav .nav_item.mv{width:267px;background-image:url(../images/navi_item_musicvideo.png),url(../images/navi_item_hover_musicvideo.png);transition-delay:.45s}.nav-container .nav .nav_item.goods{width:133px;background-image:url(../images/navi_item_goods.png),url(../images/navi_item_hover_goods.png);transition-delay:.3s}.nav-container .nav .nav_item.schedule{width:188px;background-image:url(../images/navi_item_schedule.png),url(../images/navi_item_hover_schedule.png);transition-delay:.15s}.nav-container .nav .nav_item.album{width:145px;background-image:url(../images/navi_item_album.png),url(../images/navi_item_hover_album.png);transition-delay:0s}@media screen and (max-width:640px){.nav-container .nav .nav_item{transform:translateY(30px) scale(0);margin-top:30px}.nav-container .nav.show .nav_item{transform:translateY(0) scale(.7)}}
   
 /*# sourceMappingURL=changstarr.css.map */
 
 
-
-
-.nav-container {
-    opacity: 0;
-    pointer-events: none;
-    touch-action: none;
-    user-select: none;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content:center;
-    -moz-justify-content:center;
-    -ms-justify-content:center;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-image: url(../images/navi_bg.png);
-    background-size: cover;
-    background-position: 50% 50%;
-    transition: opacity .3s, transform .3s;
-  }
-
-  .header.opened .nav-container {
-      opacity: 1;
-      pointer-events: initial !important;
-      touch-action: initial !important;
-      user-select: initial !important;
-      transition: opacity .8s;
-  }
-
-  .header.opened .nav-container .nav {
-      display: block;
-  }
-  .nav-container .nav.show .nav_item {
-      opacity: 1;
-      transform: translateY(0px) scale(1);
-      transition: opacity .8s, transform .8s;
-      transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
-  }
-
-  .nav-container .nav.show .nav_item:nth-child(1){
-    transition-delay: 0s;
-}
-  .nav-container .nav.show .nav_item:nth-child(2){
-      transition-delay: .15s;
-  }
-
-  .nav-container .nav.show .nav_item:nth-child(3){
-    transition-delay: .3s;
-}
-.nav-container .nav.show .nav_item:nth-child(4){
-  transition-delay: .45s;
-}
-  .nav-container .nav {
-        display: none;
-  }
-  
-
-  .nav-container .nav .nav_item {
-    opacity: 0;
-    transform: translateY(30px) scale(0);
-    height: 35px;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    text-indent: -999px;
-    overflow: hidden;
-    cursor: pointer;
-    background-position: 0 0, -300px -300px;
-    background-repeat: no-repeat;
-    transition: opacity .8s, transform .8s;
-    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
-  }
-
-  .nav-container .nav .nav_item:first-child {
-      margin-top: 0;
-  }
-
-  .nav-container .nav .nav_item:hover {
-    background-position: -300px -300px, 0 0;
-  }
-
-  .nav-container .nav .nav_item.mv {
-      width: 267px;
-      background-image: url(../images/navi_item_musicvideo.png), url(../images/navi_item_hover_musicvideo.png);
-      transition-delay: .45s;
-  }
-
-  .nav-container .nav .nav_item.goods {
-      width: 133px;
-      background-image: url(../images/navi_item_goods.png), url(../images/navi_item_hover_goods.png);
-      transition-delay: .3s;
-  }
-
-  .nav-container .nav .nav_item.schedule {
-      width: 188px;
-      background-image: url(../images/navi_item_schedule.png), url(../images/navi_item_hover_schedule.png);
-      transition-delay: .15s;
-  }
-
-  .nav-container .nav .nav_item.album {
-      width: 145px;
-      background-image: url(../images/navi_item_album.png), url(../images/navi_item_hover_album.png);
-      transition-delay: 0s;
-  }
-
-
-  @media screen and (max-width: 640px){
-
-    .nav-container .nav .nav_item {
-        transform: translateY(30px) scale(0);
-        margin-top: 30px;
-    }
-    .nav-container .nav.show .nav_item {
-        transform: translateY(0px) scale(0.7);
-    }
-  }
